--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 generated/
 node_modules/
+src/Assignment-1/assignment1.html
+.gitignore
+src/Assignment-2/assignment2.html
+src/Assignment-2/assignment2.css
+src/Assignment-1/submission.docx
+src/Assignment-2/assignment2.css
